Fix [Jobs][Logs] Switch job not updating logs (#50)
Also add missing tooltip to truncated UID.

--- a/src/components/ArtifactInfoSources/artifactinfosources.scss
+++ b/src/components/ArtifactInfoSources/artifactinfosources.scss
@@ -12,8 +12,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      padding: 18px;
-      padding-left: 25px;
+      padding: 18px 25px;
       position: relative;
       .sources {
         &_header {
