--- a/src/layout/Content/content.scss
+++ b/src/layout/Content/content.scss
@@ -54,6 +54,7 @@
     flex: 1;
     .no_data {
       margin: auto;
+      color: $mulledWine;
     }
   }
   &__action_bar {
